# mixture

./: ChangeLog  DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: RcppExports.R  gh_mixture.R  mixture.R  pcm.R  st_mixture.R  t_mixture.R  vg_mixture.R
data/: sx2.rda  sx3.rda
inst/: CITATION
man/: ARI.Rd  MAP.Rd  dmg.Rd  dmgh.Rd  dmst.Rd  dmvg.Rd  e.step.Rd  e_step.Rd  get_best_model.Rd  ghpcm.Rd  gpcm.Rd  m.step.Rd  main_loop.Rd  main_loop_gh.Rd  main_loop_st.Rd  main_loop_t.Rd  main_loop_vg.Rd  mixture.Rd  pcm.Rd  stpcm.Rd  sx2.Rd  sx3.Rd  tpcm.Rd  vgpcm.Rd  x2.Rd  z_ig_kmeans.Rd  z_ig_random_hard.Rd  z_ig_random_soft.Rd
src/: Cluster_Error.hpp  Makevars  Makevars.in  Makevars.win  Random_GIG.hpp  RcppExports.cpp  density.cpp  functions.h  ghpcm_arma.cpp  ghpcm_arma.hpp  gpcm_arma.cpp  gpcm_arma.hpp  mixture.c  pcm.cpp  registerDynamicSymbol.c  stpcm_arma.cpp  stpcm_arma.hpp  tpcm_arma.hpp  vgpcm_arma.cpp  vgpcm_arma.hpp  zeroin.h
src/GH_Model/: GH_EEE.hpp  GH_EEI.hpp  GH_EEV.hpp  GH_EII.hpp  GH_EVE.hpp  GH_EVI.hpp  GH_EVV.hpp  GH_Mixture_Model.h  GH_VEE.hpp  GH_VEI.hpp  GH_VEV.hpp  GH_VII.hpp  GH_VVE.hpp  GH_VVI.hpp  GH_VVV.hpp
src/ST_Model/: ST_EEE.hpp  ST_EEI.hpp  ST_EEV.hpp  ST_EII.hpp  ST_EVE.hpp  ST_EVI.hpp  ST_EVV.hpp  ST_Gamma_Solve.hpp  ST_Mixture_Model.h  ST_VEE.hpp  ST_VEI.hpp  ST_VEV.hpp  ST_VII.hpp  ST_VVE.hpp  ST_VVI.hpp  ST_VVV.hpp
src/T_Model/: Covariance_Methods.hpp  General_Methods.hpp  Missing_Data_Methods.hpp  T_Mixture_Model.hpp  T_Solve.hpp
src/VG_Model/: VG_EEE.hpp  VG_EEI.hpp  VG_EEV.hpp  VG_EII.hpp  VG_EVE.hpp  VG_EVI.hpp  VG_EVV.hpp  VG_Gamma_Solve.hpp  VG_Mixture_Model.h  VG_VEE.hpp  VG_VEI.hpp  VG_VEV.hpp  VG_VII.hpp  VG_VVE.hpp  VG_VVI.hpp  VG_VVV.hpp
